# ev-charger-simulator

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  models.py  schemas.py  session.py
backend/app/routers/: __init__.py  simulations_router.py
backend/app/services/: simulations_service.py
frontend/: .dockerignore  dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/configurations/: page.tsx
frontend/app/simulations/: page.tsx
frontend/components/: app-sidebar.tsx  charging-icon.tsx  chart-area-period.tsx  chart-charger-stats.tsx  config-selector.tsx  configs-table.tsx  metrics-tabs.tsx  nav-main.tsx  no-config-found.tsx  providers.tsx  simulation-config-form.tsx  simulation-stats.tsx  site-header.tsx  theme-switcher.tsx
frontend/lib/: api.ts  atoms.ts
