[project]
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.12",
  "greenlet>=3.2.3",
  "pydantic-settings>=2.9.1",
  "sqlalchemy>=2.0.41",
  "uvicorn>=0.34.3",
]
description = "EV Charger Simulator Backend"
name = "ev-charger-simulator"
requires-python = ">=3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "ruff>=0.11.13",
]

[project.scripts]
api = "app.main:main"
simulator = "packages.simulation.cli:main"

[tool.ruff]
ignore = []
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
target-version = "py312"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.isort]
known-first-party = ["app", "packages"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
testpaths = ["tests"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["app", "packages"]
